[package]
name = "candump-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = false

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-num = "1.0"
hex = "0.4"
sscanf = "0.3"
